# monadoc-6

./: .gitignore  LICENSE.markdown  README.markdown  cabal.project  monadoc.cabal
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml
data/: monadoc.xsl
src/exe/: Main.hs
src/lib/: Monadoc.hs
src/lib/Monadoc/: Convert.hs  Log.hs  Main.hs  Prelude.hs
src/lib/Monadoc/Class/: ToXml.hs
src/lib/Monadoc/Data/: Migrations.hs
src/lib/Monadoc/Exception/: BadHackageIndexSize.hs  DuplicateHackageIndex.hs  Forbidden.hs  Found.hs  HackageIndexExists.hs  InvalidJson.hs  InvalidPackageDescription.hs  InvalidPackageName.hs  InvalidPackageVersionConstraint.hs  InvalidPort.hs  InvalidVersion.hs  Mismatch.hs  MissingBlob.hs  MissingCode.hs  MissingHackageIndex.hs  NotFound.hs  OptionError.hs  PackageNameMismatch.hs  UnexpectedTarEntry.hs  VersionMismatch.hs
src/lib/Monadoc/Handler/: Common.hs  GetAccount.hs  GetCallback.hs  GetComponent.hs  GetFavicon.hs  GetFile.hs  GetGithubCallback.hs  GetHealthCheck.hs  GetIndex.hs  GetModule.hs  GetPackage.hs  GetRelease.hs  GetRevision.hs  GetSearch.hs  GetVersion.hs  PostLogOut.hs  PostRevoke.hs
src/lib/Monadoc/Job/: FetchDistribution.hs  FetchDistributions.hs  InsertHackageIndex.hs  ProcessDistributions.hs  ProcessHackageIndex.hs  UnpackDistribution.hs  UnpackDistributions.hs  UpdateHackageIndex.hs  UpdateLatestVersions.hs  UpdatePreferredVersions.hs  UpsertHackageIndex.hs
src/lib/Monadoc/Model/: Blob.hs  Component.hs  Dependency.hs  Distribution.hs  File.hs  HackageIndex.hs  HackageUser.hs  LatestVersion.hs  Migration.hs  Module.hs  Package.hs  PreferredVersions.hs  Session.hs  SourceRepository.hs  User.hs
src/lib/Monadoc/Prelude/: Extra.hs  Orphanage.hs
src/lib/Monadoc/Server/: Application.hs  Main.hs  Middleware.hs  Response.hs  Settings.hs
src/lib/Monadoc/Type/: Breadcrumb.hs  BuildType.hs  CabalVersion.hs  ComponentId.hs  ComponentName.hs  ComponentTag.hs  Config.hs  Context.hs  Flag.hs  GithubId.hs  GithubLogin.hs  GithubToken.hs  GithubUser.hs  Guid.hs  HackageId.hs  HackageName.hs  Handler.hs  Key.hs  License.hs  Meta.hs  Migration.hs  Model.hs  ModuleName.hs  OAuthResponse.hs  PackageName.hs  Port.hs  Release.hs  RepositoryKind.hs  RepositoryType.hs  RequestId.hs  Revision.hs  Root.hs  Route.hs  Routes.hs  Sha256.hs  Version.hs  VersionRange.hs  Warning.hs
src/lib/Monadoc/Utility/: Aeson.hs  Cabal.hs  Client.hs  Convert.hs  Either.hs  Foldable.hs  Ghc.hs  Log.hs  Sql.hs  Xml.hs
src/lib/Monadoc/Worker/: Main.hs
src/test/: Main.hs
src/test/Monadoc/Type/: ConfigSpec.hs
src/test/Monadoc/Utility/: GhcSpec.hs
