cabal-version: 3.4

name: monadoc
version: 0.2021.5.16
synopsis: Better Haskell documentation.
description: Monadoc provides better Haskell documentation.

category: Documentation
extra-source-files: README.markdown
license: MIT
license-file: LICENSE.markdown
maintainer: Taylor Fausak

data-dir: data
data-files:
    bootstrap.css
    monadoc.svg

source-repository head
    location: https://github.com/tfausak/monadoc
    type: git

common basics
    build-depends:
        , base ^>= 4.15.0
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-deriving-strategies
        -Wno-missing-export-lists
        -Wno-missing-exported-signatures
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
        -Wno-unsafe

common executable
    import: basics

    build-depends: monadoc
    ghc-options: -rtsopts -threaded

library
    import: basics

    autogen-modules: Paths_monadoc
    build-depends:
        , bytestring ^>= 0.11.1
        , case-insensitive ^>= 1.2.1
        , containers ^>= 0.6.4
        , exceptions ^>= 0.10.4
        , filepath ^>= 1.4.2
        , http-client ^>= 0.7.8
        , http-client-tls ^>= 0.3.5
        , http-types ^>= 0.12.3
        , resource-pool ^>= 0.2.3.2
        , sqlite-simple ^>= 0.4.18.0
        , stm ^>= 2.5.0
        , text ^>= 1.2.4
        , time ^>= 1.11.1
        , wai ^>= 3.2.3
        , warp ^>= 3.3.15
        , xml-conduit ^>= 1.9.1
    exposed-modules:
        Monadoc
        Monadoc.Exception.InvalidPort
        Monadoc.Exception.MissingCode
        Monadoc.Exception.OptionError
        Monadoc.Server.Application
        Monadoc.Server.Middleware
        Monadoc.Server.Response
        Monadoc.Server.Settings
        Monadoc.Type.Config
        Monadoc.Type.Context
        Monadoc.Type.Flag
        Monadoc.Type.Warning
        Monadoc.Utility.Convert
        Monadoc.Utility.Log
        Monadoc.Utility.Xml
        Paths_monadoc
    hs-source-dirs: src/lib

executable monadoc
    import: executable

    hs-source-dirs: src/exe
    main-is: Main.hs

test-suite test
    import: executable

    build-depends:
        , hspec ^>= 2.8.2
    build-tool-depends:
        , hspec-discover:hspec-discover ^>= 2.8.2
    hs-source-dirs: src/test
    main-is: Main.hs
    other-modules:
        Monadoc.Type.ConfigSpec
    type: exitcode-stdio-1.0
