cabal-version: 3.0

name: monadoc
version: 0.2021.5.16
synopsis: Better Haskell documentation.
description: Monadoc provides better Haskell documentation.

category: Documentation
extra-source-files: README.markdown
license: MIT
license-file: LICENSE.markdown
maintainer: Taylor Fausak

data-dir: data
data-files:
    bootstrap.css
    monadoc.svg
    monadoc.xsl
    robots.txt

source-repository head
    location: https://github.com/tfausak/monadoc
    type: git

common basics
    build-depends:
        , base ^>= 4.15.0
    default-extensions:
        FlexibleInstances
        NamedFieldPuns
        NoImplicitPrelude
        MultiParamTypeClasses
        TypeApplications
    default-language: Haskell2010
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-deriving-strategies
        -Wno-missing-export-lists
        -Wno-missing-exported-signatures
        -Wno-missing-import-lists
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
        -Wno-unsafe

common executable
    import: basics

    build-depends: monadoc
    ghc-options: -rtsopts -threaded

library
    import: basics

    autogen-modules: Paths_monadoc
    build-depends:
        , aeson ^>= 1.5.6
        , async ^>= 2.2.3
        , base ^>= 4.15.0
        , bytestring ^>= 0.11.1
        , Cabal ^>= 3.4.0
        , case-insensitive ^>= 1.2.1
        , containers ^>= 0.6.4
        , cookie ^>= 0.4.5
        , cryptonite ^>= 0.29
        , exceptions ^>= 0.10.4
        , filepath ^>= 1.4.2
        , http-client ^>= 0.7.8
        , http-client-tls ^>= 0.3.5
        , http-types ^>= 0.12.3
        , random ^>= 1.2.0
        , resource-pool ^>= 0.2.3
        , sqlite-simple ^>= 0.4.18
        , stm ^>= 2.5.0
        , tar ^>= 0.5.1
        , text ^>= 1.2.4
        , time ^>= 1.11.1
        , uuid ^>= 1.3.15
        , wai ^>= 3.2.3
        , warp ^>= 3.3.15
        , witch ^>= 0.3.3
        , xml-conduit ^>= 1.9.1
        , zlib ^>= 0.6.2
    exposed-modules:
        Monadoc
        Monadoc.Exception.BadHackageIndexSize
        Monadoc.Exception.DuplicateHackageIndex
        Monadoc.Exception.InvalidJson
        Monadoc.Exception.Mismatch
        Monadoc.Exception.MissingCode
        Monadoc.Exception.MissingHackageIndex
        Monadoc.Exception.OptionError
        Monadoc.Exception.UnexpectedTarEntry
        Monadoc.Handler.GetFavicon
        Monadoc.Handler.GetGithubCallback
        Monadoc.Handler.GetIndex
        Monadoc.Handler.GetPackage
        Monadoc.Model.HackageIndex
        Monadoc.Model.Package
        Monadoc.Model.PreferredVersions
        Monadoc.Model.Session
        Monadoc.Model.User
        Monadoc.Prelude
        Monadoc.Prelude.Extra
        Monadoc.Prelude.Orphanage
        Monadoc.Server.Application
        Monadoc.Server.Main
        Monadoc.Server.Middleware
        Monadoc.Server.Response
        Monadoc.Server.Settings
        Monadoc.Type.Config
        Monadoc.Type.Context
        Monadoc.Type.Flag
        Monadoc.Type.GithubUser
        Monadoc.Type.Guid
        Monadoc.Type.Handler
        Monadoc.Type.Migration
        Monadoc.Type.OAuthResponse
        Monadoc.Type.PackageName
        Monadoc.Type.Port
        Monadoc.Type.Revision
        Monadoc.Type.Route
        Monadoc.Type.Sha256
        Monadoc.Type.Version
        Monadoc.Type.VersionRange
        Monadoc.Type.Warning
        Monadoc.Utility.Convert
        Monadoc.Utility.Log
        Monadoc.Utility.Xml
        Monadoc.Worker.Main
        Paths_monadoc
    hs-source-dirs: src/lib

executable monadoc
    import: executable

    hs-source-dirs: src/exe
    main-is: Main.hs

test-suite test
    import: executable

    build-depends:
        , hspec ^>= 2.8.2
    build-tool-depends:
        , hspec-discover:hspec-discover ^>= 2.8.2
    hs-source-dirs: src/test
    main-is: Main.hs
    other-modules:
        Monadoc.Type.ConfigSpec
    type: exitcode-stdio-1.0
