cabal-version: 3.0

name: monadoc
version: 0.2021.7.1
synopsis: Worse Haskell documentation.
description: Monadoc provides worse Haskell documentation.

category: Documentation
extra-source-files: README.markdown
license: MIT
license-file: LICENSE.markdown
maintainer: Taylor Fausak

data-dir: data
data-files:
    bootstrap.css
    monadoc.png
    monadoc.svg
    monadoc.xsl
    robots.txt

source-repository head
    location: https://github.com/tfausak/monadoc
    type: git

common basics
    build-depends:
        , base ^>= 4.15.0
    default-extensions:
        FlexibleInstances
        NamedFieldPuns
        NoImplicitPrelude
        MultiParamTypeClasses
        TypeApplications
    default-language: Haskell2010
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-deriving-strategies
        -Wno-missing-export-lists
        -Wno-missing-exported-signatures
        -Wno-missing-import-lists
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
        -Wno-unsafe

common executable
    import: basics

    build-depends: monadoc
    ghc-options: -rtsopts -threaded

library
    import: basics

    autogen-modules: Paths_monadoc
    build-depends:
        , aeson ^>= 1.5.6
        , async ^>= 2.2.3
        , base ^>= 4.15.0
        , bytestring ^>= 0.11.1
        , Cabal ^>= 3.4.0
        , case-insensitive ^>= 1.2.1
        , containers ^>= 0.6.4
        , cookie ^>= 0.4.5
        , cryptonite ^>= 0.29
        , exceptions ^>= 0.10.4
        , filepath ^>= 1.4.2
        , haddock-library ^>= 1.9.0
        , http-client ^>= 0.7.8
        , http-client-tls ^>= 0.3.5
        , http-types ^>= 0.12.3
        , network-uri ^>= 2.6.4
        , random ^>= 1.2.0
        , resource-pool ^>= 0.2.3
        , retry ^>= 0.8.1
        , sqlite-simple ^>= 0.4.18
        , stm ^>= 2.5.0
        , tar ^>= 0.5.1
        , text ^>= 1.2.4
        , time ^>= 1.11.1
        , uuid ^>= 1.3.15
        , vault ^>= 0.3.1
        , wai ^>= 3.2.3
        , warp ^>= 3.3.15
        , witch ^>= 0.3.3
        , xml-conduit ^>= 1.9.1
        , zlib ^>= 0.6.2
    exposed-modules:
        Monadoc
        Monadoc.Class.ToXml
        Monadoc.Data.Migrations
        Monadoc.Exception.BadHackageIndexSize
        Monadoc.Exception.DuplicateHackageIndex
        Monadoc.Exception.Forbidden
        Monadoc.Exception.Found
        Monadoc.Exception.InvalidJson
        Monadoc.Exception.Mismatch
        Monadoc.Exception.MissingBlob
        Monadoc.Exception.MissingCode
        Monadoc.Exception.NotFound
        Monadoc.Exception.OptionError
        Monadoc.Exception.UnexpectedTarEntry
        Monadoc.Handler.Common
        Monadoc.Handler.GetAccount
        Monadoc.Handler.GetCallback
        Monadoc.Handler.GetComponent
        Monadoc.Handler.GetFavicon
        Monadoc.Handler.GetFile
        Monadoc.Handler.GetHealthCheck
        Monadoc.Handler.GetIndex
        Monadoc.Handler.GetModule
        Monadoc.Handler.GetPackage
        Monadoc.Handler.GetRelease
        Monadoc.Handler.GetSearch
        Monadoc.Handler.GetVersion
        Monadoc.Handler.PostLogOut
        Monadoc.Handler.PostRevoke
        Monadoc.Job.FetchDistribution
        Monadoc.Job.FetchDistributions
        Monadoc.Job.InsertHackageIndex
        Monadoc.Job.ProcessHackageIndex
        Monadoc.Job.UnpackDistribution
        Monadoc.Job.UnpackDistributions
        Monadoc.Job.UpdateHackageIndex
        Monadoc.Job.UpdateLatestVersions
        Monadoc.Job.UpdatePreferredVersions
        Monadoc.Job.UpsertHackageIndex
        Monadoc.Main
        Monadoc.Model.Blob
        Monadoc.Model.Component
        Monadoc.Model.Dependency
        Monadoc.Model.Distribution
        Monadoc.Model.File
        Monadoc.Model.HackageIndex
        Monadoc.Model.HackageUser
        Monadoc.Model.LatestVersion
        Monadoc.Model.Migration
        Monadoc.Model.Module
        Monadoc.Model.Package
        Monadoc.Model.PreferredVersions
        Monadoc.Model.Session
        Monadoc.Model.SourceRepository
        Monadoc.Model.User
        Monadoc.Prelude
        Monadoc.Prelude.Extra
        Monadoc.Prelude.Orphanage
        Monadoc.Server.Application
        Monadoc.Server.Main
        Monadoc.Server.Middleware
        Monadoc.Server.Response
        Monadoc.Server.Settings
        Monadoc.Type.Breadcrumb
        Monadoc.Type.BuildType
        Monadoc.Type.CabalVersion
        Monadoc.Type.ComponentId
        Monadoc.Type.ComponentName
        Monadoc.Type.ComponentTag
        Monadoc.Type.Config
        Monadoc.Type.Context
        Monadoc.Type.Flag
        Monadoc.Type.GithubId
        Monadoc.Type.GithubLogin
        Monadoc.Type.GithubToken
        Monadoc.Type.GithubUser
        Monadoc.Type.Guid
        Monadoc.Type.HackageId
        Monadoc.Type.HackageName
        Monadoc.Type.Handler
        Monadoc.Type.Key
        Monadoc.Type.License
        Monadoc.Type.Meta
        Monadoc.Type.Model
        Monadoc.Type.ModuleName
        Monadoc.Type.OAuthResponse
        Monadoc.Type.PackageName
        Monadoc.Type.Port
        Monadoc.Type.Release
        Monadoc.Type.RepositoryKind
        Monadoc.Type.RepositoryType
        Monadoc.Type.RequestId
        Monadoc.Type.Revision
        Monadoc.Type.Root
        Monadoc.Type.Route
        Monadoc.Type.Routes
        Monadoc.Type.Sha256
        Monadoc.Type.Version
        Monadoc.Type.VersionRange
        Monadoc.Type.Warning
        Monadoc.Utility.Client
        Monadoc.Utility.Convert
        Monadoc.Utility.Foldable
        Monadoc.Utility.Log
        Monadoc.Utility.Sql
        Monadoc.Utility.Xml
        Monadoc.Vendor.Client
        Monadoc.Vendor.Sql
        Monadoc.Worker.Main
        Paths_monadoc
    hs-source-dirs: src/lib

executable monadoc
    import: executable

    hs-source-dirs: src/exe
    main-is: Main.hs

test-suite test
    import: executable

    build-depends:
        , hspec ^>= 2.8.2
    build-tool-depends:
        , hspec-discover:hspec-discover ^>= 2.8.2
    hs-source-dirs: src/test
    main-is: Main.hs
    other-modules:
        Monadoc.Type.ConfigSpec
    type: exitcode-stdio-1.0
